# rust-trading-simulator

./: .dockerignore  .gitignore  Dockerfile  PERSISTENCE_SETUP.md  README.md  project_plan.md  technical_indicators_plan.md
backend/: Cargo.toml
backend/migrations/: 20250121000001_create_users_table.sql  20250121000002_add_user_auth.sql  20250122000001_add_trade_history.sql  20250123000001_update_trade_model.sql
backend/src/: api_client.rs  main.rs  models.rs  state.rs
backend/src/bots/: mod.rs  naive_momentum.rs
backend/src/db/: mod.rs  queries.rs
backend/src/indicators/: mod.rs  moving_averages.rs  rsi.rs
backend/src/routes/: auth.rs  bot.rs  indicators.rs  mod.rs  portfolio.rs  price.rs  trade.rs
backend/src/services/: auth_service.rs  bot_service.rs  mod.rs  price_service.rs  trading_service.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/src/: main.rs
